--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
   </head>
   <body>
     <script src="script.js"></script>
+    <h1>Matt Niebrugge</h1>
+    <ol>
+      <li><a href="unit1.html">Unit 1 Project</a></li>
+      <li><a href="unit2.html">Unit 2 Project</a></li>
   </body>
 </html>
