--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     <ol>
       <li><a href="unit1.html">Unit 1 Project</a></li>
       <li><a href="unit2.html">Unit 2 Project</a></li>
+      <li><a href="unit3.html">Unit 3 Project</a></li>
+      <li><a href="unit4.html">Unit 4 Project</a></li>
+      <li><a href="unit5.html">Unit 5 Project</a></li>
+      <li><a href="unit6.html">Unit 6 Project</a></li>
   </body>
 </html>
