--- a/unit6.html
+++ b/unit6.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>repl.it</title>
-	<link href="style6.css" rel="stylesheet" type="text/css" />
+	<link href="Unit6/style6.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
