Put the pictures back in the Unit6 folder

--- a/unit6.html
+++ b/unit6.html
@@ -17,7 +17,7 @@
       
       <li>Here is the image used for the border image.</li>
       <!-- insert your img tag here -->
-      <img src="stapler.png">
+      <img src="Unit6/stapler.png">
       <li>This page has a background image.</li>
       <li>This unordered list has images for list markers.</li>
       
@@ -27,7 +27,7 @@
     </main>
     <!-- insert your img tag here -->
     <div class="michael specialborder">
-      <img src="MichaelScott.jpg">
+      <img src="Unit6/MichaelScott.jpg">
     </div>
     </div>
     <footer>
