Fixed the border around the picture in Unit 6

--- a/unit6.html
+++ b/unit6.html
@@ -26,8 +26,8 @@
     </div>
     </main>
     <!-- insert your img tag here -->
-    <div class="michael specialborder">
-      <img src="Unit6/MichaelScott.jpg">
+    <div class="michael">
+      <img class="specialborder" src="Unit6/MichaelScott.jpg">
     </div>
     </div>
     <footer>
